--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+.vs
+
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -30,6 +33,8 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+out
+build
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
