--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@
 option(SAE_ENGINE_CORE_USE_EXCEPTIONS "enabled use of exceptions" ON)
 option(SAE_ENGINE_CORE_HARD_ERRORS "when ON causes hard aborts when an error is found" ON)
 
-set(CXX_STANDARD 17)
-set(CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_definitions(-DPROJECT_ROOT="${CMAKE_CURRENT_LIST_DIR}")
 
