--- a/SAEEngineCore/submodules/environment_wrap/CMakeLists.txt
+++ b/SAEEngineCore/submodules/environment_wrap/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-set(source_list ${source_list} "include/EnvironmentWrap.h")
+set(source_list ${source_list} "include/EnvironmentWrap.h" PARENT_SCOPE)
