--- a/SAEEngineCore/submodules/texture/CMakeLists.txt
+++ b/SAEEngineCore/submodules/texture/CMakeLists.txt
@@ -1,2 +1,3 @@
 
-set(source_list ${source_list} "include/Texture.h")
+set(source_list ${source_list} "Texture.h" PARENT_SCOPE)
+set(include_list ${include_list} "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
