--- a/SAEEngineCore/submodules/CMakeLists.txt
+++ b/SAEEngineCore/submodules/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_subdirectory("environment_wrap")
 add_subdirectory("shader")
 add_subdirectory("texture")
+add_subdirectory("filehandling")
+add_subdirectory("event")
+add_subdirectory("window")
