--- a/SAEEngineCore/submodules/environment_wrap/CMakeLists.txt
+++ b/SAEEngineCore/submodules/environment_wrap/CMakeLists.txt
@@ -1,2 +1,3 @@
 
-set(source_list ${source_list} "include/EnvironmentWrap.h" PARENT_SCOPE)
+set(source_list ${source_list} "${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentWrap.h" PARENT_SCOPE)
+set(include_list ${include_list} "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
