Added logging submodule Fixed type in EventHandling.h

--- a/SAEEngineCore/submodules/CMakeLists.txt
+++ b/SAEEngineCore/submodules/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory("filehandling")
 add_subdirectory("event")
 add_subdirectory("widget")
 add_subdirectory("window")
+add_subdirectory("logging")
