--- a/SAEEngineCore/submodules/event/CMakeLists.txt
+++ b/SAEEngineCore/submodules/event/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-set(source_list ${source_list} "${CMAKE_CURRENT_SOURCE_DIR}/EvemHandling.h" PARENT_SCOPE)
+set(source_list ${source_list} "${CMAKE_CURRENT_SOURCE_DIR}/EventHandling.h" PARENT_SCOPE)
 set(include_list ${include_list} "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
