Fixed cmake files and made some minor name changes

--- a/SAEEngineCore/CMakeLists.txt
+++ b/SAEEngineCore/CMakeLists.txt
@@ -6,9 +6,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(source_list ${source_list} "source/SAEEngineCore.cpp" "include/SAEEngineCore.h")
 set(include_list ${include_list} "source")
 
+add_library(SAEEngineCore STATIC "${source_list}")
+target_include_directories(SAEEngineCore PUBLIC "include" PRIVATE "${include_list}")
+
 add_subdirectory("submodules")
-
-add_library(SAEEngineCore STATIC ${source_list})
-target_include_directories(SAEEngineCore PUBLIC "include" PRIVATE ${include_list})
-
 add_subdirectory("tests")
