Added logging type and object.
sae::engine::core::lout << (whatever);

it is default compatible with anything that implements the operator<<(std::ostream&, T)
overload.

--- a/SAEEngineCore/submodules/CMakeLists.txt
+++ b/SAEEngineCore/submodules/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory("environment_wrap")
+add_subdirectory("environment")
 add_subdirectory("shader")
 add_subdirectory("texture")
 add_subdirectory("filehandling")
