Added window and window_ref types along with an initial test for them

--- a/SAEEngineCore/CMakeLists.txt
+++ b/SAEEngineCore/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_library(SAEEngineCore STATIC "source/SAEEngineCore.cpp" "include/SAEEngineCore.h")
 target_include_directories(SAEEngineCore PUBLIC "include" PRIVATE "source")
+target_link_libraries(SAEEngineCore PRIVATE glfw glad glm)
 
 add_subdirectory("submodules")
 add_subdirectory("tests")
