--- a/SAEEngineCore/submodules/filehandling/CMakeLists.txt
+++ b/SAEEngineCore/submodules/filehandling/CMakeLists.txt
@@ -1,3 +1,3 @@
 
-target_sources(SAEEngineCore PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/FileHandling.h")
+target_sources(SAEEngineCore PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/FileHandling.h" "${CMAKE_CURRENT_SOURCE_DIR}/FileHandling.cpp")
 target_include_directories(SAEEngineCore PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
