Added error handling module

--- a/SAEEngineCore/submodules/CMakeLists.txt
+++ b/SAEEngineCore/submodules/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory("shader")
 add_subdirectory("texture")
 add_subdirectory("filehandling")
 add_subdirectory("event")
+add_subdirectory("error")
 add_subdirectory("widget")
 add_subdirectory("window")
