--- a/SAEEngineCore/submodules/environment/CMakeLists.txt
+++ b/SAEEngineCore/submodules/environment/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-target_sources(SAEEngineCore PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Environment.h" "${CMAKE_CURRENT_SOURCE_DIR}/Environment.cpp")
+target_sources(SAEEngineCore PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include/Environment.h" "${CMAKE_CURRENT_SOURCE_DIR}/source/Environment.cpp")
 target_include_directories(SAEEngineCore PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 
 enable_testing()
