Beginning of transition to static library submodules

--- a/SAEEngineCore/CMakeLists.txt
+++ b/SAEEngineCore/CMakeLists.txt
@@ -5,8 +5,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_library(SAEEngineCore STATIC "source/SAEEngineCore.cpp" "include/SAEEngineCore.h")
 target_include_directories(SAEEngineCore PUBLIC "include" PRIVATE "source")
-target_link_libraries(SAEEngineCore PUBLIC SAEEngineCore_Config PRIVATE glfw glad glm)
+target_link_libraries(SAEEngineCore 
+	PUBLIC 
+	SAEEngineCore_Config 
+	
+	SAEEngineCore_Logging
+	SAEEngineCore_FileHandling
+
+	PRIVATE 
+	glfw 
+	glad 
+	glm
+)
 
 add_subdirectory("submodules")
-add_subdirectory("examples")
 add_subdirectory("tests")
