--- a/SAEEngineCore/submodules/logging/CMakeLists.txt
+++ b/SAEEngineCore/submodules/logging/CMakeLists.txt
@@ -1,4 +1,5 @@
 
-target_sources(SAEEngineCore PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Logging.h" "${CMAKE_CURRENT_SOURCE_DIR}/Logging.cpp")
-get_target_property(include_dirs SAEEngineCore INCLUDE_DIRECTORIES)
-target_include_directories(SAEEngineCore PRIVATE ${include_dirs} "${CMAKE_CURRENT_LIST_DIR}")
+add_library(SAEEngineCore_Logging STATIC "${CMAKE_CURRENT_SOURCE_DIR}/Logging.h" "${CMAKE_CURRENT_SOURCE_DIR}/Logging.cpp")
+target_include_directories(SAEEngineCore_Logging PUBLIC "include" PRIVATE "source")
+target_link_libraries(SAEEngineCore_Logging PUBLIC SAEEngineCore_Config)
+
