--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,7 +26,7 @@ jobs:
       run: cmake -E make_directory ${{runner.workspace}}/build
 
     - name: Install libxrandr
-      run: vcpkg libxrandr
+      run: vcpkg install libxrandr
 
     - name: Configure CMake
       # Use a bash shell so we can use the same syntax for environment variable
