Fixed issue with settings the c++ standard for the filehandling submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
+set(SAE_ENGINE_CPP_STANDARD 17)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -11,9 +13,6 @@ project ("SAEEngineCore" VERSION 0.0.1)
 include(CTest)
 
 add_definitions(-DPROJECT_ROOT="${CMAKE_CURRENT_LIST_DIR}")
-
-set(SAE_ENGINE_CPP_STANDARD cxx_std_17)
-
 configure_file("SAEEngineCoreConfig.h.in" "${CMAKE_CURRENT_SOURCE_DIR}/config/SAEEngineCoreConfig.h")
 
 add_library(SAEEngineCore_Config INTERFACE)
