--- a/SAEEngineCore/submodules/filehandling/CMakeLists.txt
+++ b/SAEEngineCore/submodules/filehandling/CMakeLists.txt
@@ -77,7 +77,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC "include" PRIVATE "${source_di
 target_link_libraries(${PROJECT_NAME} PUBLIC ${link_libs_public} PRIVATE ${link_libs_private})
 
 ## Set c++ version
-target_compile_options(${PROJECT_NAME} PRIVATE ${SAE_ENGINE_CPP_STANDARD})
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD ${SAE_ENGINE_CPP_STANDARD} CXX_STANDARD_REQUIRED True)
 
 ## Add the module root path to the compile definitions 
 target_compile_definitions(${PROJECT_NAME}
