--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,13 @@ jobs:
   
     - name: Checkout submodules
       uses: textbook/git-checkout-submodule-action@2.1.1
-    
+      
+    - name: Update Gcc and G++
+      shell: bash
+      run:   |
+         sudo apt update
+         sudo apt install gcc-10 g++-10
+         
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
@@ -32,6 +38,9 @@ jobs:
       # Use a bash shell so we can use the same syntax for environment variable
       # access regardless of the host operating system
       shell: bash
+      env: 
+        CC:  gcc-10 
+        CXX: g++-10
       working-directory: ${{runner.workspace}}/build
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
