Swapped SAEEngineCore_Environment to use the new submodule template and added LANGUAGES setting to each of the project() commands currently made

--- a/SAEEngineCore/CMakeLists.txt
+++ b/SAEEngineCore/CMakeLists.txt
@@ -1,8 +1,5 @@
 cmake_minimum_required (VERSION 3.8)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-
 add_library(SAEEngineCore STATIC "source/SAEEngineCore.cpp" "include/SAEEngineCore.h")
 target_include_directories(SAEEngineCore PUBLIC "include" PRIVATE "source")
 target_link_libraries(SAEEngineCore 
@@ -17,6 +14,8 @@ target_link_libraries(SAEEngineCore
 	glad 
 	glm
 )
+
+enable_testing()
 
 add_subdirectory("submodules")
 add_subdirectory("tests")
