--- a/SAEEngineCore/submodules/environment/tests/CMakeLists.txt
+++ b/SAEEngineCore/submodules/environment/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
+###
+###	Add additional test folders by adding additional add_subdirectory(<test_folder>) commands
+###
 
-add_executable(SAEEngineCore_Environment_Test "window_test.cpp")
-target_link_libraries(SAEEngineCore_Environment_Test PRIVATE SAEEngineCore)
-target_include_directories(SAEEngineCore_Environment_Test PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
+add_subdirectory("build_test")
 
-add_test("SAEEngineCore_Environment_Test" SAEEngineCore_Environment_Test)
