--- a/SAEEngineCore/tests/CMakeLists.txt
+++ b/SAEEngineCore/tests/CMakeLists.txt
@@ -1,3 +1,2 @@
 
-add_executable(SAEEngineCore_TEMPTest "test.cpp")
-target_link_libraries(SAEEngineCore_TEMPTest PRIVATE SAEEngineCore)
+add_subdirectory("build_test")
