Moved the event submodule, the environment submodule, and the widget submodule into the new static library structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-set(SAE_ENGINE_CPP_STANDARD 17)
+set(SAE_ENGINE_CPP_STANDARD 20)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD ${SAE_ENGINE_CPP_STANDARD})
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 option(SAE_ENGINE_CORE_USE_EXCEPTIONS "enabled use of exceptions" ON)
