--- a/SAEEngineCore/submodules/widget/CMakeLists.txt
+++ b/SAEEngineCore/submodules/widget/CMakeLists.txt
@@ -1,3 +1,117 @@
+cmake_minimum_required (VERSION 3.8)
 
-set(source_list ${source_list} "${CMAKE_CURRENT_SOURCE_DIR}/Widget.h" PARENT_SCOPE)
-set(include_list ${include_list} "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
+### Add the name of the submodule, a brief description, the version, and a link to the github repo to the project() call below
+###	Example:
+###		project(SAEEngineCore_StupidSubmodule VERSION 0.0.1 DESCRIPTION "a very stupid submodule" HOMEPAGE_URL "github.com/StupidSubmodule")
+###
+### I added names to the fields below to make it easier to use
+###
+project(  
+	SAEEngineCore_Widget
+	LANGUAGES CXX
+	VERSION 0.0.1
+	DESCRIPTION "Screen position handling for the core engine"
+	HOMEPAGE_URL "https://github.com/SAEEngine/SAEEngineCore"
+)
+
+### Add the following files to the subdirectories included
+###
+### include/${PROJECT_NAME}.h
+### source/${PROJECT_NAME}.cpp
+###
+
+## Create the static library
+add_library(${PROJECT_NAME} STATIC "source/${PROJECT_NAME}.cpp" "include/${PROJECT_NAME}.h")
+
+### Add source directories from ./source/* to the command below
+### Example:
+###
+###		set(source_dirs
+###			"source/some_source_dir"
+###			"source/another_source_dir"
+###		)
+###
+set(source_dirs 
+	
+)
+
+### Add libary targets to link to below, these will be public
+### Example:
+###
+###		set(link_libs_public
+###			SAEEngineCore_Config
+###			AnotherStupidLibrary
+###		)
+###
+set(link_libs_public 
+	SAEEngineCore_Config
+)
+
+### Add libary targets to link to below, these will be private
+### Example:
+###
+###		set(link_libs_public
+###			SAEEngineCore_Loggin
+###			glfw
+###		)
+###
+set(link_libs_private
+	
+)
+
+##
+##  End of submodule specific configuration section
+##
+
+## Define the source files variable
+set(src_files 
+
+)
+
+## Add the source files
+target_sources(${PROJECT_NAME} PRIVATE ${src_files})
+
+## Add the source directories
+target_include_directories(${PROJECT_NAME} PUBLIC "include" PRIVATE "${source_dirs}")
+
+## Add the set libraries
+target_link_libraries(${PROJECT_NAME} PUBLIC ${link_libs_public} PRIVATE ${link_libs_private})
+
+## Set c++ version
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD ${SAE_ENGINE_CPP_STANDARD} CXX_STANDARD_REQUIRED True)
+
+## Add the module root path to the compile definitions 
+target_compile_definitions(${PROJECT_NAME}
+	PRIVATE SOURCE_ROOT="${CMAKE_CURRENT_LIST_DIR}"
+	PRIVATE VERSION_MAJOR="${PROJECT_VERSION_MAJOR}"
+	PRIVATE VERSION_MAJOR="${PROJECT_VERSION_MINOR}"
+	PRIVATE VERSION_PATCH="${PROJECT_VERSION_PATCH}"
+	PUBLIC ${PROJECT_NAME}_SOURCE_ROOT="${CMAKE_CURRENT_LIST_DIR}"
+	PUBLIC ${PROJECT_NAME}_VERSION_MAJOR="${PROJECT_VERSION_MAJOR}"
+	PUBLIC ${PROJECT_NAME}_VERSION_MAJOR="${PROJECT_VERSION_MINOR}"
+	PUBLIC ${PROJECT_NAME}_VERSION_PATCH="${PROJECT_VERSION_PATCH}"
+)
+
+## Add the source directories
+foreach(subdir IN ${source_dirs})
+	add_subdirectory(${subdir})
+endforeach()
+
+## Enable testing
+enable_testing()
+
+## Add tests subdirectory
+add_subdirectory("tests")
+
+###
+###  Installation handling below
+###
+
+if(SAE_ENGINE_CORE_INSTALL)
+	install(
+		TARGETS ${PROJECT_NAME} 
+		EXPORT SAEEngineCore-export
+		DESTINATION "lib"
+	)
+	install(FILES "include/${PROJECT_NAME}.h" DESTINATION "include")
+endif()
