--- a/.github/workflows/stylecheck.yml
+++ b/.github/workflows/stylecheck.yml
@@ -22,9 +22,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # This will run clang format and potentially clint
+      # Installs clang format
+      - name: Install Clang Format
+        run: sudo apt install clang-format-9.0
+        shell: bash
 
+      # This will run clang format and potentially clint
+            
+      
       
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Finished formatting.
 
