Removed need for the config header as that is now handled using a target compiler definition within the SAEEngineCore_Config CMake interfacelibrary.

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -25,6 +25,11 @@
           "name": "USE_MSVC_RUNTIME_LIBRARY_DLL",
           "value": "False",
           "type": "BOOL"
+        },
+        {
+          "name": "SAE_ENGINE_CORE_USE_EXCEPTIONS",
+          "value": "True",
+          "type": "BOOL"
         }
       ]
     }
