--- a/SAEEngineCore/submodules/event/CMakeLists.txt
+++ b/SAEEngineCore/submodules/event/CMakeLists.txt
@@ -50,13 +50,13 @@ set(link_libs_public
 ### Add libary targets to link to below, these will be private
 ### Example:
 ###
-###		set(link_libs_public
-###			SAEEngineCore_Loggin
+###		set(link_libs_private
+###			SAEEngineCore_Logging
 ###			glfw
 ###		)
 ###
 set(link_libs_private
-	
+	SAEEngineCore_Logging
 )
 
 ##
