Added some basic graphics object and their structuring

--- a/SAEEngineCore/submodules/CMakeLists.txt
+++ b/SAEEngineCore/submodules/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory("event")
 add_subdirectory("error")
 add_subdirectory("widget")
 add_subdirectory("window")
+add_subdirectory("object")
