--- a/SAEEngineCore/submodules/input/CMakeLists.txt
+++ b/SAEEngineCore/submodules/input/CMakeLists.txt
@@ -7,10 +7,10 @@ cmake_minimum_required (VERSION 3.8)
 ### I added names to the fields below to make it easier to use
 ###
 project(  
-	SAEEngineCore_Event
+	SAEEngineCore_Input
 	LANGUAGES CXX
 	VERSION 0.0.1
-	DESCRIPTION "Event handling for the core engine library"
+	DESCRIPTION "Input handling and utilities for the core engine functionality"
 	HOMEPAGE_URL "https://github.com/SAEEngine/SAEEngineCore"
 )
 
@@ -45,7 +45,7 @@ set(source_dirs
 ###
 set(link_libs_public 
 	SAEEngineCore_Config
-	SAELib
+	SAEEngineCore_Event
 )
 
 ### Add libary targets to link to below, these will be private
@@ -57,7 +57,7 @@ set(link_libs_public
 ###		)
 ###
 set(link_libs_private
-	SAEEngineCore_Logging
+	glfw
 )
 
 ##
@@ -66,7 +66,7 @@ set(link_libs_private
 
 ## Define the source files variable
 set(src_files 
-	"include/SAEEngineCore_EventType.h"
+
 )
 
 ## Add the source files
@@ -92,14 +92,6 @@ target_compile_definitions(${PROJECT_NAME}
 	PUBLIC ${PROJECT_NAME}_VERSION_MAJOR="${PROJECT_VERSION_MINOR}"
 	PUBLIC ${PROJECT_NAME}_VERSION_PATCH="${PROJECT_VERSION_PATCH}"
 )
-
-## Add command to generate the event type enumerator
-add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND "${SAEEngineCore_SOURCE_ROOT}/tools/strenum.exe" ARGS 
-	"-i" "${CMAKE_CURRENT_LIST_DIR}/source/event_enum.txt" 
-	"-o" "${CMAKE_CURRENT_LIST_DIR}/include/${PROJECT_NAME}Type.h" 
-	"-n" "EVENT_TYPE"
-	"-s" "sae::engine::core"
-	BYPRODUCTS "${CMAKE_CURRENT_LIST_DIR}/include/${PROJECT_NAME}Type.h")
 
 ## Add the source directories
 foreach(subdir IN ${source_dirs})
