Signed-off-by: JonathanCline <59320680+JonathanCline@users.noreply.github.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,20 @@
-add_subdirectory("glad")
-add_subdirectory("glfw")
-add_subdirectory("glm")
-add_subdirectory("saelib")
+
+if(TARGET glad)
+else()
+	add_subdirectory("glad")
+endif()
+
+if(TARGET glfw)
+else()
+	add_subdirectory("glfw")
+endif()
+
+if(TARGET glm)
+else()
+	add_subdirectory("glm")
+endif()
+
+if(TARGET SAELib)
+else()
+	add_subdirectory("saelib")
+endif()
