A few small changes were made, I dont remember what Signed-off-by: JonathanCline <59320680+JonathanCline@users.noreply.github.com>

--- a/SAEEngineCore/submodules/shader/CMakeLists.txt
+++ b/SAEEngineCore/submodules/shader/CMakeLists.txt
@@ -46,6 +46,7 @@ set(source_dirs
 set(link_libs_public 
 	SAEEngineCore_Config
 	SAEEngineCore_FileHandling
+	SAEEngineCore_Environment
 )
 
 ### Add libary targets to link to below, these will be private
