--- a/SAEEngineCore/submodules/iso/CMakeLists.txt
+++ b/SAEEngineCore/submodules/iso/CMakeLists.txt
@@ -7,10 +7,10 @@ cmake_minimum_required (VERSION 3.8)
 ### I added names to the fields below to make it easier to use
 ###
 project(  
-	SAEEngineCore_Event
+	SAEEngineWorld_Iso
 	LANGUAGES CXX
 	VERSION 0.0.1
-	DESCRIPTION "Event handling for the core engine library"
+	DESCRIPTION "heavy wip with tools for isometric drawing"
 	HOMEPAGE_URL "https://github.com/SAEEngine/SAEEngineCore"
 )
 
@@ -45,8 +45,6 @@ set(source_dirs
 ###
 set(link_libs_public 
 	SAEEngineCore_Config
-	SAEEngineCore_Widget
-	SAELib
 )
 
 ### Add libary targets to link to below, these will be private
@@ -58,7 +56,7 @@ set(link_libs_public
 ###		)
 ###
 set(link_libs_private
-	SAEEngineCore_Logging
+	
 )
 
 ##
@@ -67,7 +65,7 @@ set(link_libs_private
 
 ## Define the source files variable
 set(src_files 
-	"include/${PROJECT_NAME}Type.h"
+
 )
 
 ## Add the source files
@@ -93,14 +91,6 @@ target_compile_definitions(${PROJECT_NAME}
 	PUBLIC ${PROJECT_NAME}_VERSION_MAJOR="${PROJECT_VERSION_MINOR}"
 	PUBLIC ${PROJECT_NAME}_VERSION_PATCH="${PROJECT_VERSION_PATCH}"
 )
-
-## Add command to generate the event type enumerator
-add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND "${SAEEngineCore_SOURCE_ROOT}/tools/strenum.exe" ARGS 
-	"-i" "${CMAKE_CURRENT_LIST_DIR}/source/event_enum.txt" 
-	"-o" "${CMAKE_CURRENT_LIST_DIR}/include/${PROJECT_NAME}Type.h" 
-	"-n" "EVENT_TYPE"
-	"-s" "sae::engine::core"
-	BYPRODUCTS "${CMAKE_CURRENT_LIST_DIR}/include/${PROJECT_NAME}Type.h")
 
 ## Add the source directories
 foreach(subdir IN ${source_dirs})
