Updated a few things and removed cruft. Option flags! Signed-off-by: JonathanCline <59320680+JonathanCline@users.noreply.github.com>

--- a/SAEEngineCore/submodules/object/CMakeLists.txt
+++ b/SAEEngineCore/submodules/object/CMakeLists.txt
@@ -48,6 +48,7 @@ set(link_libs_public
 	SAEEngineCore_Event
 	SAEEngineCore_Artist
 	SAEEngineCore_Widget
+	SAEEngineCore_Environment
 )
 
 ### Add libary targets to link to below, these will be private
